force-app/main/default/objects/Student_Account__c/Student_Account__c.object-meta.xml
<CustomObject>
    <label>Student Account</label>
    <nameField>
        <label>Student Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>