force-app/main/default/objects/Student_Account__c/fields/Account_Balance__c.field-meta.xml
<CustomField>
    <fullName>Account_Balance__c</fullName>
    <description>[PeopleSoft] - Current balance of student account at ASU, less estimated financial aid.</description>
    <label>Current Balance</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>