force-app/main/default/objects/Student_Account__c/fields/Credit_Balance__c.field-meta.xml
<CustomField>
    <fullName>Credit_Balance__c</fullName>
    <description>Student account credit balance</description>
    <label>Credit Balance</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>