force-app/main/default/objects/Student_Account__c/fields/Direct_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Direct_Deposit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[PeopleSoft] - Chosen student method to receive financial aid refund.</description>
    <label>Direct Deposit</label>
    <type>Checkbox</type>
</CustomField>