force-app/main/default/objects/Student_Account__c/fields/Future_Balance__c.field-meta.xml
<CustomField>
    <fullName>Future_Balance__c</fullName>
    <description>Future student account balances</description>
    <label>Future Balance</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>