force-app/main/default/objects/Student_Account__c/fields/Past_Due_Tip__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_Tip__c</fullName>
    <description>Past due student account amount</description>
    <label>Past Due Tip</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>